# app/Http/Requests/UserUpdateRequest.php
@@ -25,6 +25,7 @@ class UserUpdateRequest extends FormRequest
     {
         return [
             'name' => 'required|string|max:255',
+            'username' => 'required|string|max:255|unique:users,username,'.$this->route('user')->id,
             'email' => 'required|string|email|max:255|unique:users,email,'.$this->route('user')->id,
             'password' => 'string|min:6|confirmed',
             'roles' => 'required',
