# resources/views/admin/users/edit.blade.php
@@ -23,6 +23,17 @@
                             </div>
                         </div>
                         <div class="form-group row">
+                            <label for="username" class="col-md-4 col-form-label text-md-right">@lang('general.username')</label>
+                            <div class="col-md-6">
+                                <input id="username" type="username" class="form-control{{ $errors->has('username') ? ' is-invalid' : '' }}" name="username" value="{{ old('username') ? old('username') : $user->username }}" required>
+                                @if ($errors->has('username'))
+                                    <span class="invalid-feedback" role="alert">
+                                    <strong>{{ $errors->first('username') }}</strong>
+                                </span>
+                                @endif
+                            </div>
+                        </div>
+                        <div class="form-group row">
                             <label for="email" class="col-md-4 col-form-label text-md-right">@lang('general.email')</label>
                             <div class="col-md-6">
                                 <input id="email" type="email" class="form-control{{ $errors->has('email') ? ' is-invalid' : '' }}" name="email" value="{{ old('email') ? old('email') : $user->email }}" required>
